--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,15 @@
         </activity>
         <activity
             android:name=".NowPlaying"
-            android:parentActivityName=".MainActivity"
             android:label="@string/title_activity_now_playing"
-            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" >
+            android:parentActivityName=".MainActivity">
+
+            <!-- android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"> -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity"/>
+                android:value=".MainActivity" />
         </activity>
+        <activity android:name=".extraActivity"></activity>
     </application>
 
 </manifest>
